@@ -1,3 +1,6 @@
+4 November 2025: Wouter
+	- Fix dns64 log output to log the default instead of a null string.
+
 1 November 2025: Yorgos
 	- Fix #1366: Infra cache does not work correctly for NAT64, by
 	  moving the NAT64 synthesis from the iterator when selecting a target
